crates/sql-orm/tests/ui/dbset_query_ast_bypass_unavailable.stderr
error[E0599]: no method named `select_query` found for struct `sql_orm::DbSetQuery<E>` in the current scope
  --> tests/ui/dbset_query_ast_bypass_unavailable.rs:16:27
   |
16 |     let _borrowed = query.select_query();
   |                           ^^^^^^^^^^^^ private field, not a method
   |
help: there is a method `with_select_query` with a similar name, but with different arguments
  --> src/dbset_query.rs
   |
   |     pub fn with_select_query(mut self, select_query: SelectQuery) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `into_select_query` found for struct `sql_orm::DbSetQuery<E>` in the current scope
  --> tests/ui/dbset_query_ast_bypass_unavailable.rs:17:24
   |
17 |     let _owned = query.into_select_query();
   |                        ^^^^^^^^^^^^^^^^^
   |
help: there is a method `with_select_query` with a similar name, but with different arguments
  --> src/dbset_query.rs
   |
   |     pub fn with_select_query(mut self, select_query: SelectQuery) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
